--- a/index.html
+++ b/index.html
@@ -4,14 +4,63 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="Description" content="First/default page of the blog site">
+  <meta name="Description" content="This is an introduction to the website">
   <title>Home page</title>
+
+  <link rel="stylesheet" href="CSS/home.css">
 </head>
 
 <body>
-  <header></header>
+  <header class="navbar">
+    <a href="#"><img src="Images/logo-no-background.png" class="logo"
+      alt="Image for the website logo"></a>
+    <input class="burgermenu" type="checkbox" id="burgermenu"/>
+    <label class="icon" for="burgermenu"><span class="burgerline"></span></label>
 
-  <main></main>
+    <!--
+      Top menu/Navigation bar
+    -->
+    <nav class="navigation">
+      <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="HTML/exhibition.html">About us</a></li>
+        <li><a href="HTML/events.html">Blogs</a></li>
+        <li><a href="HTML/visit.html">Contact us</a></li>
+      </ul>
+    </nav>
+
+  </header>
+
+  <main>
+    <h1 class="home_title">Drop by Drop</h1>
+
+    <div class="home_intro">
+      <div class="intro_description">
+        <h3 class="description_text" id="description_text_1">The most important resource</h3>
+        <h2 class="description_text" id="description_text_2">Water</h2>
+        <p class="description_text" id="description_text_3">Learn how to save water, drop by drop</p>
+      </div>
+      <img class="intro_image" src="Images/underwater.png">
+    </div>
+
+    <h2 class="home_latest">Latest posts</h2>
+    <div class="line_1"></div>
+    <div class="line_2"></div>
+
+    <div class="home_blogs">
+      <div class="blog">
+        <img class="blog_image" src="Images/water.png">
+        <div class="blog_description">
+          <h3 class="blog_desc_text">Drinking water reduction</h3>
+          <div class="blog_line"></div>
+          <div class="blog_date_and_more">
+            <p class="blog_desc_date">25.04.2023</p>
+            <p class="blog_desc_more">Read more ></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 
   <footer></footer>
 </body>
