--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Description" content="This is an introduction to the website">
   <title>Home page</title>
+  <script src="https://kit.fontawesome.com/26fd6b155e.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="CSS/home.css">
 </head>
@@ -62,6 +63,14 @@
     </div>
   </main>
 
-  <footer></footer>
+  <footer>
+    <img class="home_footer_image" src="Images/logo-white 1.png">
+    <h1 class="home_title">Drop by Drop</h1>
+    <div class="footer_logos">
+      <i class="fa-brands fa-facebook fa-2xl"></i>
+      <i class="fa-brands fa-instagram fa-2xl"></i>
+      <i class="fa-brands fa-twitter fa-2xl"></i>
+    </div>
+  </footer>
 </body>
 </html>
