--- a/index.html
+++ b/index.html
@@ -60,6 +60,31 @@
           </div>
         </div>
       </div>
+
+      <div class="blog">
+        <img class="blog_image" src="Images/water.png">
+        <div class="blog_description">
+          <h3 class="blog_desc_text">Drinking water reduction</h3>
+          <div class="blog_line"></div>
+          <div class="blog_date_and_more">
+            <p class="blog_desc_date">25.04.2023</p>
+            <p class="blog_desc_more">Read more ></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="blog">
+        <img class="blog_image" src="Images/water.png">
+        <div class="blog_description">
+          <h3 class="blog_desc_text">Drinking water reduction</h3>
+          <div class="blog_line"></div>
+          <div class="blog_date_and_more">
+            <p class="blog_desc_date">25.04.2023</p>
+            <p class="blog_desc_more">Read more ></p>
+          </div>
+        </div>
+      </div>
+      
     </div>
   </main>
 
