--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
     <!--
       Blog posts
     -->
-    <div class="home_blogs">
+    <ul class="home_blogs">
 
       <!--
         Indiviual blogs
       -->
-      <div class="blog">
+      <li class="blog">
         <img class="blog_image" src="Images/water.png"
         alt="Image for blog">
         <div class="blog_description">
@@ -74,9 +74,9 @@
             <p class="blog_desc_more">Read more ></p>
           </div>
         </div>
-      </div>
+      </li>
 
-      <div class="blog">
+      <li class="blog">
         <img class="blog_image" src="Images/water.png"
         alt="image for blog">
         <div class="blog_description">
@@ -87,9 +87,9 @@
             <p class="blog_desc_more">Read more ></p>
           </div>
         </div>
-      </div>
+      </li>
 
-      <div class="blog">
+      <li class="blog">
         <img class="blog_image" src="Images/water.png"
         alt="image for blog">
         <div class="blog_description">
@@ -100,9 +100,9 @@
             <p class="blog_desc_more">Read more ></p>
           </div>
         </div>
-      </div>
+      </li>
       
-    </div>
+    </ul>
 
     <!--
       next & previous buttons and dots
