--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Drop by Drop is an informative website about water and how it's misused">
+  <meta name="description" 
+  content="Drop by Drop is an informative website about water and world news regarding it">
   <title>Home page</title>
   <script src="https://kit.fontawesome.com/26fd6b155e.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="CSS/home.css">
+  <script defer src="Javascript/home.js"></script>
 </head>
 
 <body>
@@ -58,70 +60,74 @@
     <!--
       Blog posts
     -->
-    <ul class="home_blogs">
-
-      <!--
-        Indiviual blogs
-      -->
-      <li class="blog">
-        <img class="blog_image" src="Images/water.png"
-        alt="Image for blog">
-        <div class="blog_description">
-          <h3 class="blog_desc_text">Drinking water reduction</h3>
-          <div class="blog_line"></div>
-          <div class="blog_date_and_more">
-            <p class="blog_desc_date">25.04.2023</p>
-            <p class="blog_desc_more">Read more ></p>
-          </div>
-        </div>
-      </li>
-
-      <li class="blog">
-        <img class="blog_image" src="Images/water.png"
-        alt="image for blog">
-        <div class="blog_description">
-          <h3 class="blog_desc_text">Drinking water reduction</h3>
-          <div class="blog_line"></div>
-          <div class="blog_date_and_more">
-            <p class="blog_desc_date">25.04.2023</p>
-            <p class="blog_desc_more">Read more ></p>
-          </div>
-        </div>
-      </li>
-
-      <li class="blog">
-        <img class="blog_image" src="Images/water.png"
-        alt="image for blog">
-        <div class="blog_description">
-          <h3 class="blog_desc_text">Drinking water reduction</h3>
-          <div class="blog_line"></div>
-          <div class="blog_date_and_more">
-            <p class="blog_desc_date">25.04.2023</p>
-            <p class="blog_desc_more">Read more ></p>
-          </div>
-        </div>
-      </li>
-      
-    </ul>
-
-    <!--
-      next & previous buttons and dots
-    -->
     <div class="home_carousel">
-      <a class="carousel_buttons" id="prev" href="#">
-        <i class="fa-solid fa-chevron-left fa-2xl"></i>
-      </a>
 
-      <div class="carousel_dots">
-        <span class="dot" id="dot_1"></span>
-        <span class="dot" id="dot_2"></span>
-        <span class="dot" id="dot_3"></span>
+      <ul class="home_blogs">
+
+        <!--
+          Indiviual blogs
+        -->
+        <li class="blog">
+          <img class="blog_image" src="Images/water.png"
+          alt="Image for blog">
+          <div class="blog_description">
+            <h3 class="blog_desc_text">Drinking water reduction</h3>
+            <div class="blog_line"></div>
+            <div class="blog_date_and_more">
+              <p class="blog_desc_date">25.04.2023</p>
+              <p class="blog_desc_more">Read more ></p>
+            </div>
+          </div>
+        </li>
+  
+        <li class="blog">
+          <img class="blog_image" src="Images/water.png"
+          alt="image for blog">
+          <div class="blog_description">
+            <h3 class="blog_desc_text">Drinking water reduction</h3>
+            <div class="blog_line"></div>
+            <div class="blog_date_and_more">
+              <p class="blog_desc_date">25.04.2023</p>
+              <p class="blog_desc_more">Read more ></p>
+            </div>
+          </div>
+        </li>
+  
+        <li class="blog">
+          <img class="blog_image" src="Images/water.png"
+          alt="image for blog">
+          <div class="blog_description">
+            <h3 class="blog_desc_text">Drinking water reduction</h3>
+            <div class="blog_line"></div>
+            <div class="blog_date_and_more">
+              <p class="blog_desc_date">25.04.2023</p>
+              <p class="blog_desc_more">Read more ></p>
+            </div>
+          </div>
+        </li> 
+      </ul>
+  
+      <!--
+        next & previous buttons and dots
+      -->
+      <div class="carousel">
+        <a class="carousel_buttons" id="prev" href="#">
+          <i class="fa-solid fa-chevron-left fa-2xl"></i>
+        </a>
+  
+        <div class="carousel_dots">
+          <span class="dot" id="dot_1"></span>
+          <span class="dot" id="dot_2"></span>
+          <span class="dot" id="dot_3"></span>
+        </div>
+  
+        <a class="carousel_buttons" id="next" href="#">
+          <i class="fa-solid fa-chevron-left fa-rotate-180 fa-2xl"></i>
+        </a>
       </div>
 
-      <a class="carousel_buttons" id="next" href="#">
-        <i class="fa-solid fa-chevron-left fa-rotate-180 fa-2xl"></i>
-      </a>
     </div>
+
   </main>
 
   <footer>
