--- a/index.html
+++ b/index.html
@@ -14,35 +14,35 @@
 </head>
 
 <body>
+
+  <!--
+    Top menu/navigation bar
+  -->
   <header class="navbar">
     <a href="#"><img src="Images/logo-no-background.png" class="logo"
       alt="Image for the website logo"></a>
     <input class="burgermenu" type="checkbox" id="burgermenu"/>
     <label class="icon" for="burgermenu"><span class="burgerline"></span></label>
 
-    <!--
-      Top menu/Navigation bar
-    -->
     <nav class="navigation">
       <ul class="menu">
         <li><a href="#">Home</a></li>
-        <li><a href="HTML/exhibition.html">About us</a></li>
-        <li><a href="HTML/events.html">Blogs</a></li>
-        <li><a href="HTML/visit.html">Contact us</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Blogs</a></li>
+        <li><a href="#">Contact us</a></li>
       </ul>
     </nav>
 
   </header>
 
   <main>
+
     <!--
       Website title
     -->
     <h1 class="home_title">Drop by Drop</h1>
 
-    <!--
-      Separate text and image
-    -->
+    <!-- Separate text and image -->
     <div class="home_intro">
       <div class="intro_description">
         <h3 class="description_text" id="description_text_1">The most important resource</h3>
@@ -64,9 +64,7 @@
 
       <ul class="home_blogs">
 
-        <!--
-          Indiviual blogs
-        -->
+        <!-- Indiviual blogs -->
         <li class="blog">
           <img class="blog_image" src="Images/water.png"
           alt="Image for blog">
@@ -130,6 +128,9 @@
 
   </main>
 
+  <!--
+    At the bottom of every page
+  -->
   <footer>
     <img class="home_footer_image" src="Images/logo-white 1.png">
     <h1 class="home_title">Drop by Drop</h1>
