--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="navigation">
       <ul class="menu">
         <li><a href="#">Home</a></li>
-        <li><a href="#">About us</a></li>
+        <li><a href="HTML/about.html">About us</a></li>
         <li><a href="#">Blogs</a></li>
         <li><a href="#">Contact us</a></li>
       </ul>
