--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-  content="page where recently posted blogs are found">
-  <title>Blog posts page</title>
+  content="how to make contact">
+  <title>Contact us page</title>
 
   <script src="https://kit.fontawesome.com/26fd6b155e.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="../CSS/about.css">
+  <link rel="stylesheet" href="../CSS/contact.css">
 </head>
 
 <body>
@@ -24,8 +24,8 @@
       <ul class="menu">
         <li><a href="../index.html">Home</a></li>
         <li><a href="../HTML/about.html">About us</a></li>
-        <li><a href="#">Blogs</a></li>
-        <li><a href="../HTML/contact.html">Contact us</a></li>
+        <li><a href="../HTML/blogs.html">Blogs</a></li>
+        <li><a href="#">Contact us</a></li>
       </ul>
     </nav>
 
