--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <ul class="menu">
         <li><a href="#">Home</a></li>
         <li><a href="HTML/about.html">About us</a></li>
-        <li><a href="#">Blogs</a></li>
-        <li><a href="#">Contact us</a></li>
+        <li><a href="HTML/blogs.html">Blogs</a></li>
+        <li><a href="HTML/contact.html">Contact us</a></li>
       </ul>
     </nav>
 
