--- a/HTML/blogs.html
+++ b/HTML/blogs.html
@@ -10,7 +10,8 @@
 
   <script src="https://kit.fontawesome.com/26fd6b155e.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="../CSS/about.css">
+  <link rel="stylesheet" href="../CSS/blogs.css">
+  <script defer src="../Javascript/blogs.js"></script>
 </head>
 
 <body>
