--- a/HTML/specific.html
+++ b/HTML/specific.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-  content="information on Drop by Drop">
-  <title>About us page</title>
+  content="details of the clicked post">
+  <title>Specific blog page</title>
 
   <script src="https://kit.fontawesome.com/26fd6b155e.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="../CSS/about.css">
-  <script defer src="../Javascript/about.js"></script>
+  <link rel="stylesheet" href="../CSS/specific.css">
+  <script defer src="../Javascript/specific.js"></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     <nav class="navigation">
       <ul class="menu">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="#">About us</a></li>
+        <li><a href="../HTML/about.html">About us</a></li>
         <li><a href="../HTML/blogs.html">Blogs</a></li>
         <li><a href="../HTML/contact.html">Contact us</a></li>
       </ul>
