--- a/HTML/about.html
+++ b/HTML/about.html
@@ -16,7 +16,7 @@
 
 <body>
   <header class="navbar">
-    <a href="#"><img src="Images/logo-no-background.png" class="logo"
+    <a href="#"><img src="../Images/logo-no-background.png" class="logo"
       alt="Image for the website logo"></a>
     <input class="burgermenu" type="checkbox" id="burgermenu"/>
     <label class="icon" for="burgermenu"><span class="burgerline"></span></label>
@@ -32,8 +32,33 @@
 
   </header>
 
-  <main></main>
+  <main>
 
-  <footer></footer>
+    <!--
+      Page title
+    -->
+    <h1 class="about_title">About us</h1>
+
+    <div class="about_intro">
+      <p class="intro_text">
+        Water is by far the most important natural resource in the world.
+      </p>
+      <p class="intro_text">
+        We humans use it more than any other living being on the planet. 
+        In turn, we use it far more than necessary.
+      </p>
+    </div>
+
+  </main>
+
+  <footer>
+    <img class="home_footer_image" src="../Images/logo-white 1.png">
+    <h1 class="about_title">Drop by Drop</h1>
+    <div class="footer_logos">
+      <i class="fa-brands fa-facebook fa-2xl"></i>
+      <i class="fa-brands fa-instagram fa-2xl"></i>
+      <i class="fa-brands fa-twitter fa-2xl"></i>
+    </div>
+  </footer>
 </body>
 </html>
