--- a/HTML/specific.html
+++ b/HTML/specific.html
@@ -16,7 +16,7 @@
 
 <body>
   <header class="navbar">
-    <a href="#"><img src="Images/logo-no-background.png" class="logo"
+    <a href="#"><img src="../Images/logo-no-background.png" class="logo"
       alt="Image for the website logo"></a>
     <input class="burgermenu" type="checkbox" id="burgermenu"/>
     <label class="icon" for="burgermenu"><span class="burgerline"></span></label>
@@ -34,6 +34,14 @@
 
   <main></main>
 
-  <footer></footer>
+  <footer>
+    <img class="home_footer_image" src="../Images/logo-white 1.png">
+    <h1 class="home_title">Drop by Drop</h1>
+    <div class="footer_logos">
+      <i class="fa-brands fa-facebook fa-2xl"></i>
+      <i class="fa-brands fa-instagram fa-2xl"></i>
+      <i class="fa-brands fa-twitter fa-2xl"></i>
+    </div>
+  </footer>
 </body>
 </html>
