--- a/HTML/about.html
+++ b/HTML/about.html
@@ -52,7 +52,7 @@
   </main>
 
   <footer>
-    <img class="home_footer_image" src="../Images/logo-white 1.png">
+    <img class="about_footer_image" src="../Images/logo-white 1.png">
     <h1 class="about_title">Drop by Drop</h1>
     <div class="footer_logos">
       <i class="fa-brands fa-facebook fa-2xl"></i>
