about page done

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -47,6 +47,65 @@
         We humans use it more than any other living being on the planet. 
         In turn, we use it far more than necessary.
       </p>
+
+    </div>
+
+    <div class="about_goal">
+      <div class="goal_intro">
+        <div class="goal_intro_title">
+          <h2 class="goal_title">Our goal</h2>
+          <div class="line_1"></div>
+          <div class="line_2"></div>
+        </div>
+
+        <p class="goal_intro_text">
+          In order to help limit the use of water, this site serves as both a news website 
+          and an informative website, all matters regarding water in some way or form.
+        </p>
+        <p class="goal_intro_text">
+          Man receiving a fine for overusing water, global warming reducing ice mass 
+          in the north, new discovery in ocean, it all counts.
+        </p>
+        <p class="goal_intro_text">
+          This blog site encourages all who visit it to better respect our planet and its 
+          resources, water especially.
+        </p>
+
+      </div>
+
+      <div class="goal_image">
+        <img class="goal_intro_image" src="../Images/about_image.png">
+      </div>
+
+    </div>
+
+    <div class="about_subjects">
+      <div class="subjects_text">
+        <h2 class="subjects_text_title">Curious?</h2>
+        <h3 class="subjects_text_desc">
+          Here are the different subjects to dive into:
+        </h3>
+      </div>
+
+      <div class="subjects">
+        <a class="subject" href="#">
+          <img class="subject_image" src="../Images/subject_image_1.png">
+          <h3 class="subject_title">Water usage</h3>
+        </a>
+
+        <a class="subject" href="#">
+          <img class="subject_image" src="../Images/subject_image_2.png">
+          <h3 class="subject_title">Science</h3>
+        </a>
+
+        <a class="subject" href="#">
+          <img class="subject_image" src="../Images/subject_image_3.png">
+          <h3 class="subject_title">Climate change</h3>
+        </a>
+
+      </div>
+
+      
     </div>
 
   </main>
