--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -31,11 +31,17 @@
 
   </header>
 
-  <main></main>
+  <main>
+    <h1 class="contact_title">Contact us</h1>
+    <p class="big_text">Send us an email</p>
+    <p class="small_text">Get an answer within the week</p>
+
+    <div class="contact_textboxes"></div>
+  </main>
 
   <footer>
-    <img class="home_footer_image" src="../Images/logo-white 1.png">
-    <h1 class="home_title">Drop by Drop</h1>
+    <img class="contact_footer_image" src="../Images/logo-white 1.png">
+    <h1 class="contact_title">Drop by Drop</h1>
     <div class="footer_logos">
       <i class="fa-brands fa-facebook fa-2xl"></i>
       <i class="fa-brands fa-instagram fa-2xl"></i>
