--- a/HTML/blogs.html
+++ b/HTML/blogs.html
@@ -32,11 +32,72 @@
 
   </header>
 
-  <main></main>
+  <a>
+    <h1 class="blog_title">Blog posts</h1>
+    <p class="blog_intro">
+      Find the latest and past news in here. 
+      The posts involve any kind of matters involving water.
+    </p>
+
+    <div class="blog_filter_mobile">
+      <p class="filter_intro">Search & sort</p>
+      <i class="fa-solid fa-chevron-left fa-rotate-270 fa-2xl"></i>
+    </div>
+    <div class="blog_filter_desktop"></div>
+
+    <ul class="blog_posts">
+
+      <!-- Indiviual blogs -->
+      <li class="blog">
+        <img class="blog_image" src="../Images/water.png"
+        alt="Image for blog">
+        <div class="blog_description">
+          <h3 class="blog_desc_text">Drinking water reduction</h3>
+          <div class="blog_line"></div>
+          <div class="blog_date_and_more">
+            <p class="blog_desc_date">25.04.2023</p>
+            <p class="blog_desc_more">Read more ></p>
+          </div>
+        </div>
+      </li>
+
+      <li class="blog">
+        <img class="blog_image" src="../Images/water.png"
+        alt="image for blog">
+        <div class="blog_description">
+          <h3 class="blog_desc_text">Drinking water reduction</h3>
+          <div class="blog_line"></div>
+          <div class="blog_date_and_more">
+            <p class="blog_desc_date">25.04.2023</p>
+            <p class="blog_desc_more">Read more ></p>
+          </div>
+        </div>
+      </li>
+
+      <li class="blog">
+        <img class="blog_image" src="../Images/water.png"
+        alt="image for blog">
+        <div class="blog_description">
+          <h3 class="blog_desc_text">Drinking water reduction</h3>
+          <div class="blog_line"></div>
+          <div class="blog_date_and_more">
+            <p class="blog_desc_date">25.04.2023</p>
+            <p class="blog_desc_more">Read more ></p>
+          </div>
+        </div>
+      </li>
+    </ul>
+
+    <a href="#"><div class="blog_button">
+      <h3 class="button_text">See more</h3>
+      <div class="button_line"></div>
+      <i class="fa-solid fa-chevron-left fa-rotate-270 fa-2xl"></i>
+    </div></a>
+  </main>
 
   <footer>
-    <img class="home_footer_image" src="../Images/logo-white 1.png">
-    <h1 class="home_title">Drop by Drop</h1>
+    <img class="blog_footer_image" src="../Images/logo-white 1.png">
+    <h1 class="blog_title">Drop by Drop</h1>
     <div class="footer_logos">
       <i class="fa-brands fa-facebook fa-2xl"></i>
       <i class="fa-brands fa-instagram fa-2xl"></i>
