--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     -->
     <div class="home_carousel">
 
-      <ul class="home_blogs">
+      <ul class="blog_posts">
 
         <!-- Indiviual blogs -->
         <li class="blog">
