--- a/HTML/blogs.html
+++ b/HTML/blogs.html
@@ -38,13 +38,16 @@
       Find the latest and past news in here. 
       The posts involve any kind of matters involving water.
     </p>
+    <div class="blog_top_line"></div>
 
     <div class="blog_sections">
-      <div class="blog_filter_mobile">
-        <p class="filter_intro">Search & sort</p>
-        <i class="fa-solid fa-chevron-left fa-rotate-270 fa-2xl"></i>
+      <div class="blog_filter">
+        <div class="blog_filter_mobile">
+          <p class="filter_intro">Search & sort</p>
+          <i class="fa-solid fa-chevron-left fa-rotate-270 fa-2xl"></i>
+        </div>
+        <div class="blog_filter_desktop"></div>
       </div>
-      <div class="blog_filter_desktop"></div>
 
       <ul class="blog_posts">
         <!-- Indiviual blogs -->
@@ -86,15 +89,28 @@
             </div>
           </div>
         </li>
+
+        <li class="blog">
+          <img class="blog_image" src="../Images/water.png"
+          alt="image for blog">
+          <div class="blog_description">
+            <h3 class="blog_desc_text">Drinking water reduction</h3>
+            <div class="blog_line"></div>
+            <div class="blog_date_and_more">
+              <p class="blog_desc_date">25.04.2023</p>
+              <p class="blog_desc_more">Read more ></p>
+            </div>
+          </div>
+        </li>
       </ul>
 
     </div>
 
-    <a href="#"><div class="blog_button">
+    <div class="blog_button">
       <h3 class="button_text">See more</h3>
       <div class="button_line"></div>
       <i class="fa-solid fa-chevron-left fa-rotate-270 fa-2xl"></i>
-    </div></a>
+    </div>
   </main>
 
   <footer>
