--- a/HTML/subject.html
+++ b/HTML/subject.html
@@ -32,11 +32,74 @@
 
   </header>
 
-  <main></main>
+  <main>
+    <div class="subject_top">
+      <h1 class="subject_title">Water science</h1>
+      <h3 class="subject_intro">
+        The many properties and magic in h20.
+      </h3>
+    </div>
+
+    <div class="subject_info">
+      <div class="info" id="info_1">
+        <div class="info_text">
+          <h2 class="text_title">
+            Underwater lifeforms
+          </h2>
+          <p class="text_description">
+            Underwater lifeforms indicate a certain living condition for underwater creatures, and thus tells scientists the difference in the water they thrive in.
+          </p>
+          <p class="text_description">
+            The difference in water dives deeper than there being fresh water and salt water.
+          </p>
+          <p class="text_description">
+            Underwater lifeforms indicate a certain living condition for underwater creatures, and thus tells scientists the difference in the water they thrive in.
+          </p>
+        </div>
+        <img class="info_image" src="../Images/subject_picture1.png">
+      </div>
+
+      <div class="info" id="info_2">
+        <div class="info_text">
+          <h2 class="text_title">
+            Underwater lifeforms
+          </h2>
+          <p class="text_description">
+            Underwater lifeforms indicate a certain living condition for underwater creatures, and thus tells scientists the difference in the water they thrive in.
+          </p>
+          <p class="text_description">
+            The difference in water dives deeper than there being fresh water and salt water.
+          </p>
+          <p class="text_description">
+            Underwater lifeforms indicate a certain living condition for underwater creatures, and thus tells scientists the difference in the water they thrive in.
+          </p>
+        </div>
+        <img class="info_image" src="../Images/subject_picture3.png">
+      </div>
+
+      <div class="info" id="info_3">
+        <div class="info_text">
+          <h2 class="text_title">
+            Underwater lifeforms
+          </h2>
+          <p class="text_description">
+            Underwater lifeforms indicate a certain living condition for underwater creatures, and thus tells scientists the difference in the water they thrive in.
+          </p>
+          <p class="text_description">
+            The difference in water dives deeper than there being fresh water and salt water.
+          </p>
+          <p class="text_description">
+            Underwater lifeforms indicate a certain living condition for underwater creatures, and thus tells scientists the difference in the water they thrive in.
+          </p>
+        </div>
+        <img class="info_image" src="../Images/subject_picture2.png">
+      </div>
+    </div>
+  </main>
 
   <footer>
-    <img class="home_footer_image" src="../Images/logo-white 1.png">
-    <h1 class="home_title">Drop by Drop</h1>
+    <img class="subject_footer_image" src="../Images/logo-white 1.png">
+    <h1 class="subject_title">Drop by Drop</h1>
     <div class="footer_logos">
       <i class="fa-brands fa-facebook fa-2xl"></i>
       <i class="fa-brands fa-instagram fa-2xl"></i>
