--- a/HTML/about.html
+++ b/HTML/about.html
@@ -88,17 +88,17 @@
       </div>
 
       <div class="subjects">
-        <a class="subject" href="#">
+        <a class="subject" href="../HTML/subject.html">
           <img class="subject_image" src="../Images/subject_image_1.png">
           <h3 class="subject_title">Water usage</h3>
         </a>
 
-        <a class="subject" href="#">
+        <a class="subject" href="../HTML/subject.html">
           <img class="subject_image" src="../Images/subject_image_2.png">
           <h3 class="subject_title">Science</h3>
         </a>
 
-        <a class="subject" href="#">
+        <a class="subject" href="../HTML/subject.html">
           <img class="subject_image" src="../Images/subject_image_3.png">
           <h3 class="subject_title">Climate change</h3>
         </a>
