--- a/HTML/blogs.html
+++ b/HTML/blogs.html
@@ -51,7 +51,7 @@
 
       <ul class="blog_posts">
         <!-- Indiviual blogs -->
-        <li class="blog">
+        <li class="blog"><a href="../HTML/specific.html">
           <img class="blog_image" src="../Images/water.png"
           alt="Image for blog">
           <div class="blog_description">
@@ -61,10 +61,10 @@
               <p class="blog_desc_date">25.04.2023</p>
               <p class="blog_desc_more">Read more ></p>
             </div>
-          </div>
+          </div></a>
         </li>
   
-        <li class="blog">
+        <li class="blog"><a href="../HTML/specific.html">
           <img class="blog_image" src="../Images/water.png"
           alt="image for blog">
           <div class="blog_description">
@@ -74,10 +74,10 @@
               <p class="blog_desc_date">25.04.2023</p>
               <p class="blog_desc_more">Read more ></p>
             </div>
-          </div>
+          </div></a>
         </li>
   
-        <li class="blog">
+        <li class="blog"><a href="../HTML/specific.html">
           <img class="blog_image" src="../Images/water.png"
           alt="image for blog">
           <div class="blog_description">
@@ -87,10 +87,10 @@
               <p class="blog_desc_date">25.04.2023</p>
               <p class="blog_desc_more">Read more ></p>
             </div>
-          </div>
+          </div></a>
         </li>
 
-        <li class="blog">
+        <li class="blog"><a href="../HTML/specific.html">
           <img class="blog_image" src="../Images/water.png"
           alt="image for blog">
           <div class="blog_description">
@@ -100,7 +100,7 @@
               <p class="blog_desc_date">25.04.2023</p>
               <p class="blog_desc_more">Read more ></p>
             </div>
-          </div>
+          </div></a>
         </li>
       </ul>
 
