--- a/HTML/specific.html
+++ b/HTML/specific.html
@@ -32,11 +32,50 @@
 
   </header>
 
-  <main></main>
+  <main>
+    <img class="specific_hero" src="../Images/specific_picture3.png">
+    <h1 class="specific_title">Ice mass reduction</h1>
+
+    <div class="specific_sections">
+      <div class="specific_description">
+        <p class="description_text">
+          Recent discoveries show a reduction in ice masses from the north. The 
+          reduction in ice mass from the north has grave significance for the environment 
+          and our lives. Due to global warming, several icebergs crumbles away, and 
+          whatever ice masses lying elsewhere are slowly chipping away.
+        </p>
+  
+        <p class="description_text">
+          This poses several threats, being the following:
+        </p>
+  
+        <ul class="description_lists">
+          <li class="list_point">
+            This sudden change puts any fauna living in these areas under great jeopardy.
+          </li>
+          <li class="list_point">
+            In terms of habitational danger, such events are prone to natural disasters.
+          </li>
+          <li class="list_point">
+            Areas like these are sometimes good places for scientists to experiment and 
+            fine ways to conteract against what puts icy environments at risk. It is essential 
+            to help preserve areas like these.
+          </li>
+        </ul>
+  
+      </div>
+  
+      <div class="specific_image">
+        <img class="image" src="../Images/specific_picture2.png">
+      </div>
+      
+    </div>
+
+  </main>
 
   <footer>
-    <img class="home_footer_image" src="../Images/logo-white 1.png">
-    <h1 class="home_title">Drop by Drop</h1>
+    <img class="specific_footer_image" src="../Images/logo-white 1.png">
+    <h1 class="specific_title">Drop by Drop</h1>
     <div class="footer_logos">
       <i class="fa-brands fa-facebook fa-2xl"></i>
       <i class="fa-brands fa-instagram fa-2xl"></i>
