--- a/HTML/specific.html
+++ b/HTML/specific.html
@@ -33,7 +33,13 @@
   </header>
 
   <main>
-    <img class="specific_hero" src="../Images/specific_picture3.png">
+    <div class="top_container">
+      <a class="back_button" href="#" onclick="history.back()">
+        <i class="fa-solid fa-chevron-left"></i>
+        Back
+      </a>
+      <img class="specific_hero" src="../Images/specific_picture3.png">
+    </div>
     <h1 class="specific_title">Ice mass reduction</h1>
 
     <div class="specific_sections">
