--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -46,24 +46,26 @@
           <div class="input">
             <input
               name="fullname"
+              type="text"
               class="input_box"
               id="input_name"
               placeholder="Full name"
             />
             <div class="form_error" id="fullname_error">
-              Please enter your full name (Min. 5 characters)
+              <!--Please enter your full name (Min. 5 characters)-->
             </div>
           </div>
 
           <div class="input">
             <input
               name="email"
+              type="text"
               class="input_box"
               id="input_mail"
               placeholder="E-mail"
             />
             <div class="form_error" id="email_error">
-              Please enter valid email adress
+              <!--Please enter valid email adress-->
             </div>
           </div>
         </div>
@@ -71,31 +73,33 @@
         <div class="input">
           <input
             name="subject"
+            type="text"
             class="input_box"
             id="input_subject"
             placeholder="Subject"
           />
           <div class="form_error" id="subject_error">
-            Please write subject (Min. 15 characters)
+            <!--Please write subject (Min. 15 characters)-->
           </div>
         </div>
 
         <div class="input">
           <textarea 
             name="message" 
+            type="text"
             class="input_box" 
             id="input_message" 
             placeholder="Message..."></textarea>
           <div class="form_error" id="message_error">
-            Please enter message (Min. 25 characters)
+            <!--Please enter message (Min. 25 characters)-->
           </div>
         </div>
 
       </div>
 
       <div class="contact_buttons">
-        <a class="button_clear" href="#">Clear</a>
-        <a class="button_submit" href="#">Submit</a>
+        <button class="button button_clear" type="reset" href="#">Clear</button>
+        <button class=" button button_submit" type="submit" href="#">Submit</button>
       </div>
     </form>
 
